# supervillain

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Makefile  README.md  changes.rst  conf.py  contributors.rst  index.rst  license.rst  master.bib  numba-profiling-report.md  pyproject.toml  requirements.txt  support.rst  todo.rst
LICENSES/: README.md
benchmark/: form_kernels.py
example/: action-comparison.py  compare-villain-compact.py  comparison_plot.py  no-intersection-frozen.py  no-vortices.py  villain-algorithm-comparison.py  why-measure-inline.py  worldline-algorithm-comparison.py
examples/: action-comparison.py  compare-and-contrast.ipynb  equivalence-class-v.py  gauge-transformation.py  metropolis.py  plot-D4-irreps.py  plot-forms.py  test_energy.py  villain-metropolis.py
publication/: generalized-bkt.rst
supervillain/: __init__.py  __main__.py  action.py  action.rst  analysis.rst  batch.py  compact-boson.rst  configurations.py  ensemble.py  ensemble.rst  form.rst  generator.rst  h5.py  h5.rst  lattice.py  lattice.rst  layout.py  license.py  measurement.rst  meta.py  no_intersection.rst  observable.rst  reference_implementations.rst  worldline.rst
test/: end-to-end.py  extend-ensemble.py  generate.py  harness.py  index.rst  test_autocorrelation_fallback.py  test_batch.py  test_batch_dtype.py  test_batch_h5.py  test_benchmark_smoke.py  test_coexact_sparse.py  test_coexact_update.py  test_compact_equivalence.py  test_compare-reference-observables.py  test_delta_s.py  test_ensemble-extension.py  test_equivalence-class-v.py  test_field_dtypes.py  test_gauge-invariance.py  test_harness.py  test_lattice.py  test_lattice_fourier.py  test_lattice_interlaced.py  test_lattice_kernels.py  test_lattice_reference.py  test_lattice_tables.py  (+13 more)
(+150 files in other folders)
