[project]

name = "supervillain"
description = "Quantum monte carlo for the Villain model"
authors = [
    
]
requires-python = ">=3.14"

dynamic = ["version"]
dependencies = [
    "coverage>=7.14.1",
    "dict2css>=0.6.0",
    "docutils>=0.22.4",
    "gitpython>=3.1.50",
    "h5py>=3.16.0",
    "imagesize>=2.0.0",
    "jupyter>=1.1.1",
    "jupyter-server>=2.19.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pybtex>=0.26.1",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.5",
    "sphinx-favicon>=1.1.0",
    "sphinx-jinja2-compat>=0.4.1",
    "sphinx-math-dollar>=1.3",
    "sphinx-prompt>=1.10.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-tabs>=3.5.0",
    "sphinxcontrib-bibtex>=2.7.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "standard-imghdr>=3.10.14",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]

[options]

install_requires = [
    ]

[tool.setuptools]
py-modules = [
    "supervillain",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "supervillain.meta.version" }
